added giang's shiny app

--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,10 @@
 					<h2>Interactive DVs of Public Health Issues</h2>
 					<h4>Giang Nguyen</h4>
 				</section>
-				<section data-state="case5_hist">
+				<section data-state="case5">
+					<iframe src="https://star-is-here.shinyapps.io/giang_leaflet/" width="100%" height="500px"></iframe>
+				</section>
+				<!-- <section data-state="case5_hist">
 				<style>.case5_hist body{
 					background-image: url('img/intHIST_opaque.png'); 
 					height: 100%; 
@@ -1239,7 +1242,7 @@
 				</section>
 				<section data-state="case5_leaflet">
 					<img src="img/worldMAL.jpg" width="100%">
-				</section>
+				</section> -->
 				<section data-state="case5">
 					<h3>Implications for policymakers</h3>
 					<ul>
@@ -1251,7 +1254,7 @@
 				</section>
 				<section data-state="case6">
 				<style>.case6 header.left:after { content: "Case Example Data Visualization 6:"; }</style>
-					<h2>nteractive DVs of Social and Education Issues in Developing Countries and Evidence-Based Policy Implications</h2>
+					<h2>Interactive DVs of Social and Education Issues in Developing Countries and Evidence-Based Policy Implications</h2>
 					<h4>Star Ying</h4>
 				</section>
 				<section data-state="header35">
