--- a/index.html
+++ b/index.html
@@ -1216,6 +1216,7 @@
 				</section>
 				<section data-state="case5">
 					<iframe src="https://star-is-here.shinyapps.io/giang_leaflet/" width="100%" height="500px"></iframe>
+					<p><small><a href="https://star-is-here.shinyapps.io/giang_leaflet/">https://star-is-here.shinyapps.io/giang_leaflet/</a></small></p>
 				</section>
 				<!-- <section data-state="case5_hist">
 				<style>.case5_hist body{
