--- a/index.html
+++ b/index.html
@@ -1105,8 +1105,7 @@
 					<h4>Star Ying</h4>
 				</section>
 				<section data-state="case6_force">
-				<style>.case6_force header.left:after { content: "Case Example Data Visualization 6:"; }</style>
-					<h6>DPRK Net Migration vs. Global Chronic Malnutrition (Stunting)</h6>
+				<style>.case6_force header.left:after { content: "DPRK Net Migration vs. Global Chronic Malnutrition (Stunting)"; }</style>
 					<p><small>Net Migration Exceeding 1000</small></p>
 					<iframe src="iframe/force/dprkforce.html" width="900px" height="400px"></iframe>
 					<aside class="notes">
@@ -1119,8 +1118,7 @@
 					</aside>
 				</section>
 				<section data-state="case6_scale">
-				<style>.case6_scale header.left:after { content: "Case Example Data Visualization 6:"; }</style>
-					<h6>Scaling Global Malnutrition to the DPRK</h6>
+				<style>.case6_scale header.left:after { content: "Scaling Global Malnutrition to the DPRK"; }</style>
 					<iframe src="iframe/scale/scaleme.html" width="900px" height="400px"></iframe>					
 					<aside class="notes">
 						<ul>
