added hannah's final edits

--- a/index.html
+++ b/index.html
@@ -869,120 +869,70 @@
 					<h4>Hannah Cho</h4>
 				</section>
 				<section data-state="case3_under">
-				<style>.case3_under 
-					body{
-					background-image: url('img/propUND_opaque.png'); 
-					height: 100%; 
-					width: 100%;
-					background-repeat: no-repeat;
-					background-position: center;
-					} 
-					.case3_under header.left:after { content: "Case Example Data Visualization 3:"; }</style>
-					<ul>
-						<li>Percentage of Underweight Children Under Age 5 in Mexico/Central American Region of Developing Economies as defined by World Economic Situation and Prospects 2012</li>
-						<li>Honduras has highest drop in percentage</li>
-						<li>Costa Rica has lowest percentages overall</li>
-						<li>Guatemala has highest percentages overall</li>
-					</ul>
-				</section>
-				<section data-state="case3_under">
+				<style>.case3_under header.left:after { content: "Case Example Data Visualization 3:"; }</style>
 					<img src="img/propUND.jpg" width="85%">
 					<aside class="notes">
 						<ul>
-							<li>In the following slides, you will notice that Costa Rica has the lowest percentages of underweight children, stunting children, incidence of tuberculosis, maternal mortaltiy ratio.</li>
-							<li>It is consistent in its decreasing trend</li>
-							<li>This may be due to the fact that Costa Rica is largely regarded as having the most stable and most democratic government among the Central American countries.</li>
-							<li>https://www.britannica.com/place/Costa-Rica</li>
+							<li>The region that I focused on is the Mexico/Central American Region of Developing Economies as defined by the World Economic Situation and Prospects of 2012.</li>
+							<li>This is a line plot that represents the Percentage of Underweight Children Under Age 5 of seven different countries: Costa Rica, El Salvador, Guatemala, Honduras, Mexico, Nicaragua, and Panama. Underweight and Stunting are two indicators that the World Health Organization uses to assess malnutrition.</li>
+							<li>We can see that Honduras, the purple line, has the highest drop in percentage, Costa Rica, the dark blue line, has the lowest percentages overall, and Guatemala, the green line, has the highest percentages overall.</li>
+							<li>The black line, which represents the average percentages for the Latin America & Caribbean region, is only above the percentages for Costa Rica, and closely follows the pink line that represents Panama. This means that most of the countries represented in this line plot have percentages of Underweight children far worse than the average percentages of the Latin America & Caribbean region.</li>
+							<li>(Data used from World Bank.)</li>
+							<li>http://www.who.int/nutgrowthdb/about/introduction/en/index5.html</li>
 						</ul>
 					</aside>
 				</section>
 				<section data-state="case3_stunt">
-				<style>.case3_stunt body{
-					background-image: url('img/prevSTU_opaque.png'); 
-					height: 100%; 
-					width: 100%;
-					background-repeat: no-repeat;
-					background-position: center;
-					} 
-					.case3_stunt header.left:after { content: "Case Example Data Visualization 3:"; }</style>
-					<ul>
-						<li>Prevalence of stunting among children under age 5 in Mexico/Central America Region</li>
-						<li>El Salvador has highest drop in percentage</li>
-						<li>Costa Rica has lowest percentages overall</li>
-						<li>Guatemala has highest percentages overall</li>
-					</ul>
-				</section>
-				<section data-state="case3_stunt">
+				<style>.case3_stunt header.left:after { content: "Case Example Data Visualization 3:"; }</style>
 					<img src="img/prevSTU.jpg", width="85%">
 					<aside class="notes">
 						<ul>
-							<li>Stunting and Underweight are components of health that are indicators of malnutrition.</li>
-							<li>Overall, El Salvador has highest drop in percentage, but from 1990, Honduras has the highest drop in percentage.</li>
-							<li>HOnduras experience reform in health system beginning in 1990 (according to PAHO http://www.paho.org/PAHO-USAID/dmdocuments/Health_System_Profile-Honduras_2009.pdf )</li>
+							<li>This line plot represents the Prevalence of stunting, height for age of children under age 5 for the same countries.</li>
+							<li>Looking at the whole graph, El Salvador has highest drop in percentage, but if we look at the data starting from 1990, Honduras has the highest drop in percentage. Again we see that Costa Rica has the lowest percentages overall and Guatemala has the highest percentages overall. This time, Costa Rica is the only country that is below the line that represents the Latin american & Caribbean region.</li>
+							<li>However, overall, all of the countries are on a decreasing trend. Mexico saw a fairly large increase beginning in 1990 when the other countries saw the beginning of a decreasing trend. This may have been due to the Hurricane Diana that occurred in 1990 and the repercussions that the country faced.</li>
 						</ul>
 					</aside>
 				</section>
 				<section data-state="case3_tub">
-				<style>.case3_tub body{
-					background-image: url('img/incTUB_opaque.png'); 
-					height: 100%; 
-					width: 100%;
-					background-repeat: no-repeat;
-					background-position: center;
-					} 
-					.case3_tub header.left:after { content: "Case Example Data Visualization 3:"; }</style>
-					<ul>
-						<li>Incidence of Tuberculosis per 100,000 people for Mexico/Central America Region</li>
-						<li>Honduras has greatest drop in incidence</li>
-						<li>Costa Rica has lowest incidence overall</li>
-					</ul>
-				</section>
-				<section data-state="case3_tub">
+				<style>.case3_tub header.left:after { content: "Case Example Data Visualization 3:"; }</style>
 					<img src="img/incTUB.jpg", width="85%">
 					<aside class="notes">
 						<ul>
-							<li>Guatemala has incidences throughout the years that are consistently higher than the other countries, as opposed to Honduras in which there is a steep drop in incidences.</li>
-							<li>Honduras has highest drop in percentage, reflecting its highest drops in percentage of stunting and underweight children.</li>
-							<li>Drop in incidence seems to correspond with the drop in percentage of underweight children</li>
-							<li>Costa Rica has the lowest percentages of stunting and underweight children, in addition to the lowest percentages of incidence of tuberculosis.</li>
+							<li>This line plot represents the Incidence of Tuberculosis per 100,000 people for the same group of countries.</li>
+							<li>Again, we see that Honduras had the highest drop in incidence, reflecting its highest drops in percentage of stunting and underweight children. The timing of when the drops occur seem to be around the year 1995. Additionally, we see that Costa Rica has the lowest incidence of tuberculosis.</li>
+							<li>In this graph we can see that Mexico and Costa Rica have incidences of tuberculosis that are below the average Incidence of Tuberculosis for the Americas.</li>
+							<li>As opposed to the line plots for Stunting and Underweight children where all the countries had decreasing trends, this line plot seems to have countries that have trends where the countries experience relapses and the incidences seem to get worse over time.</li>
 						</ul>
 					</aside>
 				</section>
 				<section data-state="case3_mat">
-				<style>.case3_mat body{
-					background-image: url('img/MMR_opaque.png'); 
-					height: 100%; 
-					width: 100%;
-					background-repeat: no-repeat;
-					background-position: center;
-					} 
-					.case3_mat header.left:after { content: "Case Example Data Visualization 3:"; }</style>
-					<ul>
-						<li>Maternal mortality ratio per 100,000 live births</li>
-						<li>Honduras has the steepest drop from 1990 to 2000</li>
-						<li>Costa Rica has lowest percentages</li>
-						<li>Overall, Nicaragua has highest percentages</li>
-					</ul>
-				</section>
-				<section data-state="case3_mat">
+				<style>.case3_mat header.left:after { content: "Case Example Data Visualization 3:"; }</style>
 					<img src="img/MMR.jpg", width="85%">
 					<aside class="notes">
 						<ul>
-							<li>In Honduras, drop in maternal mortality is before the drop in incidence of tuberculosis by approximately 10 years</li>
-							<li>Maternal mortality ratio per 100,000 live births</li>
-							<li>Honduras has the steepest drop from 1990 to 2000</li>
-							<li>Costa Rica as lowest percentages</li>
-							<li>Overall, Nicaragua has highest percentages</li>
+							<li>This line plot portrays the Maternal Mortality Ratio per 100,000 live births in the same countries.</li>
+							<li>We see that Honduras has the steepest drop in maternal mortality ratio from 1990 to 2000. Interestingly in Honduras, the drop in maternal mortality is before the drop in incidence of tuberculosis by approximately 10 years</li>
+							<li>Again, we see that Costa Rica has the lowest percentages. Both Mexico and Costa Rica are countries that have ratios that are below the average ratios for the Americas region. Overall, Nicaragua has the highest percentages. Panama seems to experience nearly no change in their ratios from 1990 to 2015.</li>
 						</ul>
 					</aside>
 				</section>
 				<section data-state="case3">
 					<h3>Implications for Policymakers:</h3>
+					<ul>
+						<li>Use countries such as Costa Rica and Honduras as examples</li>
+						<li>Inequalities in access to health care facilities need to be eliminated.</li>
+						<li>Focus on countries like Nicaragua and Guatemala</li>
+					</ul>
 					<aside class="notes">
 						<ul>
-							<li>In the following slides, you will notice that Costa Rica has the lowest percentages of underweight children, stunting children, incidence of tuberculosis, maternal mortaltiy ratio. It is consistent in its decreasing trend</li>
-							<li>This may be due to the fact that Costa Rica is largely regarded as having the most stable and most democratic government among the Central American countries. https://www.britannica.com/place/Costa-Rica</li>
-							<li>Honduras experience reform in health system beginning in 1990 (according to PAHO http://www.paho.org/PAHO-USAID/dmdocuments/Health_System_Profile-Honduras_2009.pdf )</li>
+							<li>It seems there is no direct correlation between malnutrition and key health conditions such as incidence of tuberculosis and maternal mortality ratio, because DVs I developed did not factor into the potential effect of time-lag between a potential cause and effect. I discovered interesting trends that were apparent and, for the most part, consistent  in each of the data visualizations.</li>
+							<li>First of all, Costa Rica consistently had the lowest percentages, incidences, and ratios of negative health conditions. All of the health indicators, except for Percentage of Underweight Children had a steady decreasing trend. This may be due to the fact that Costa Rica is largely regarded as having the most stable and most democratic government among the Central American countries. https://www.britannica.com/place/Costa-Rica</li>
+							<li>This type of government allowed for the people’s voices to be heard and for a universal health care system to be established and then reformed in the 1990s with a larger emphasis on expanding coverage. Additionally, Costa Rica has a policy that focuses on human development and therefore the health of its population. http://www.who.int/healthsystems/topics/financing/healthreport/CostaRicaNo11.pdf http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2376989/</li>
+							<li>Additionally, Honduras experienced a reform in its health system beginning in 1990 as well as , which may explain the steep drop that is shown in each data visualization. The reform aimed for a more progressive integration of the public insurance of the country, and that the population has access to timely and quality health services. http://www.paho.org/PAHO-USAID/dmdocuments/Health_System_Profile-Honduras_2009.pdf</li>
+							<li>Looking at both Costa Rica and Honduras, it seems that health care systems that focus on spreading coverage and providing quality basic health services through public insurance seem to work and help improve the health of the population. Policymakers could research further into these two countries’ health systems and see why their reforms worked and use them as examples for other nations.</li>
+							<li>Countries like Guatemala, which consistently had the highest prevalence in regards to malnutrition, and was still fairly high in incidences of tuberculosis and maternal mortality ratio, have health systems with high levels of private expenditure and unequal access to healthcare facilities. http://www.who.int/countryfocus/cooperation_strategy/ccsbrief_gtm_en.pdf</li>
+							<li>Nicaragua also has an issue with rural regions having less access to healthcare facilities, and thus the population in rural regions have worse health. Therefore, this is an indicator that unequal access to health care facilities need to be eliminated. http://www.fsdinternational.org/country/nicaragua/healthissues</li>
+							<li>When we look at the data visualizations as a whole, we notice that some countries are consistently in worse health conditions compared to the other countries, and also typically when one health indicator is bad, the rest are bad as well. This is an implication that countries such as Nicaragua and Guatemala, the two countries that seem to be faring the worst out of this group of countries, need to be focused on to protect the health of the population.   We recommend UN health organizations, medical NGOs and developed countries in North America provide due attention and viable resources to help Nicaragua and Guatemala to improve their public health infrastructure. Communicable disease like TB knows no borders.</li>
 						</ul>
 					</aside>
 				</section>
