change uppercase to lowercase

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				</section>
 				<section data-state="authors">
 				<style>.authors header.left:after { content: "Research Co-authors"; }</style>
-					<ul style="list-style:none;">
+					<ul style="list-style:none; font-size: 25px;">
 						<li>Giang Nguyen (ISR Foundation Center for Interdisciplinary Research)</li>
 						<li>Clara Kyung (McGill University)</li>
 						<li>Ariel Lee (ISR Foundation Center for Science Diplomacy)</li>
@@ -1056,8 +1056,8 @@
 				</section>
 				<section data-state="case6_force">
 				<style>.case6_force header.left:after { content: "DPRK Net Migration vs. Global Chronic Malnutrition (Stunting)"; }</style>
-					<p><small>Net Migration Exceeding 1000</small></p>
 					<iframe src="iframe/force/dprkforce.html" width="900px" height="400px"></iframe>
+					<p><small>Net Migration Exceeding 1000</small></p>
 					<aside class="notes">
 						<ul>
 							<li>In the previous DV series, we mentioned that citizens of Ryanggang have the worst health conditions but appear immobile. We plotted global chronic malnutrition in children aged 24-59.9 months as a heat map.</li>
