fix line spacing on Few's considerations

--- a/index.html
+++ b/index.html
@@ -613,12 +613,12 @@
 					<img src="img/prin1.png" width="90%">
 					<p><small>Figure: Visualization of medical costs, by Ben Fry of Seed Media Group, seen in “Information Visualization, Design, and the Arts: Collision or Collaboration” (Few, 2010)</small></p>
 					<strong><small><ul>
-						<li>Few’s critiques:</li>
+						<li style="margin-bottom: 7px;">Few’s critiques:</li>
 						<ul>
-							<li>What do the radii mean?</li>
-							<li>Should we compare the areas of the slices?</li>
-							<li>What about the angles of the slices?</li>
-							<li>Trouble comparing radii and areas</li>
+							<li style="margin-bottom: 7px;">What do the radii mean?</li>
+							<li style="margin-bottom: 7px;">Should we compare the areas of the slices?</li>
+							<li style="margin-bottom: 7px;">What about the angles of the slices?</li>
+							<li style="margin-bottom: 7px;">Trouble comparing radii and areas</li>
 						</ul>
 					</ul></small></strong>
 				</section>
